--- a/index.html
+++ b/index.html
@@ -65,58 +65,159 @@
       </div>
     </div><!--end row-->
 
+    <Br>
+      <Br>
+        <Br>
+          <Br>
+            <Br>
     <h1 id="scrollspyHeading2" style="text-align: center">Stuff</h1>
     <!--Card Starts Here-->
     <div class="row g-4">
       <div class="col-lg-4 col-sm-12 col-12">
         <div class="card">
-          <img src="club_sandwhich-min.jpg" class="img-fluid">
+          <img src="Big_Snow_American_Dream_02.jpg" class="img-fluid">
           <div class="card-body">
-            <p class="card-text">ClubsNFries</p>
-            <h3>$14.99</h3>
-            <h3>BLT Club Sandwhiches with a side of Fries</h3>
+            <h1>Big Snow</h1>
+            <h1>This is where I wanted to go and didn't</h1>
+            <a href="https://www.bigsnowamericandream.com/"
+            class="btn btn-primary">Visit Site</a>
           </div>
         </div>
       </div>
 
       <div class="col-lg-4 col-sm-12 col-12">
         <div class="card">
-          <img src="pizzawings.jpg" class="img-fluid">
+          <img src="attachment-GettyImages-520903388.jpg" class="img-fluid">
           <div class="card-body">
-            <p class="card-text">PizzaWings</p>
-            <h3>$15.59</h3>
-            <h3>1 Pizza pie with toppings of choice along with Wings on the side</h3>
+            <h1>Met Life</h1>
+            <h1>I ended up here</h1>
+            <a href="https://www.metlifestadium.com/"
+            class="btn btn-primary">Visit Site</a>
           </div>
         </div>
       </div>
 
       <div class="col-lg-4 col-sm-12 col-12">
         <div class="card">
-          <img src="FishNChips.jpg" class="img-fluid">
           <div class="card-body">
-            <p class="card-text">FishNChips</p>
-            <h3>$12.99</h3>
-            <h3>Fish and Fries that are so called chips</h3>
+            <h1>Korean People</h1>
+            <h1>This is what my sister made me watch for 2 hours</h1>
+            <a href="https://www.youtube.com/channel/UCOmHUn--16B90oW2L6FRR3A"
+            class="btn btn-primary">Visit Site</a>
           </div>
         </div>
       </div>
       <!--Card Ends Here-->
 
+<!-- Remove the container if you want to extend the Footer to full width. -->
+<div class="container my-5">
+  <!-- Footer -->
+  <footer class="text-center text-white" style="background-color: #63b1df">
+    <!-- Grid container -->
+    <div class="container">
+      <!-- Section: Links -->
+      <section class="mt-5">
+        <!-- Grid row-->
+        <div class="row text-center d-flex justify-content-center pt-5">
+          <!-- Grid column -->
+          <div class="col-md-2">
+            <h6 class="text-uppercase font-weight-bold">
+              <a href="https://www.youtube.com/@adultswim" class="text-white">About us</a>
+            </h6>
+          </div>
+          <!-- Grid column -->
 
+          <!-- Grid column -->
+          <div class="col-md-2">
+            <h6 class="text-uppercase font-weight-bold">
+              <a href="https://www.tesla.com/" class="text-white">Products</a>
+            </h6>
+          </div>
+          <!-- Grid column -->
 
+          <!-- Grid column -->
+          <div class="col-md-2">
+            <h6 class="text-uppercase font-weight-bold">
+              <a href="https://www.nobelprize.org/prizes/lists/all-nobel-peace-prizes/" class="text-white">Awards</a>
+            </h6>
+          </div>
+          <!-- Grid column -->
 
+          <!-- Grid column -->
+          <div class="col-md-2">
+            <h6 class="text-uppercase font-weight-bold">
+              <a href="https://www.911.gov/" class="text-white">Help</a>
+            </h6>
+          </div>
+          <!-- Grid column -->
 
-    <footer style="background-color: white;">
-      <h3 style="text-align: center;">Contact:
-        <a href="mailto:525Jyau@frhsd.com">525JYau@frhsd.com</a>
-      </h3>
-    </footer>
+          <!-- Grid column -->
+          <div class="col-md-2">
+            <h6 class="text-uppercase font-weight-bold">
+              <a href="https://www.911.gov/" class="text-white">Contact</a>
+            </h6>
+          </div>
+          <!-- Grid column -->
+        </div>
+        <!-- Grid row-->
+      </section>
+      <!-- Section: Links -->
 
-  </div>
+      <hr class="my-5" />
+
+      <!-- Section: Text -->
+      <section class="mb-5">
+        <div class="row d-flex justify-content-center">
+          <div class="col-lg-8">
+            <p>
+              To learn more about me, don't.
+            </p>
+          </div>
+        </div>
+      </section>
+      <!-- Section: Text -->
+
+      <!-- Section: Social -->
+      <section class="text-center mb-5">
+        <a href="" class="text-white me-4">
+          <i class="fab fa-facebook-f"></i>
+        </a>
+        <a href="" class="text-white me-4">
+          <i class="fab fa-twitter"></i>
+        </a>
+        <a href="" class="text-white me-4">
+          <i class="fab fa-google"></i>
+        </a>
+        <a href="" class="text-white me-4">
+          <i class="fab fa-instagram"></i>
+        </a>
+        <a href="" class="text-white me-4">
+          <i class="fab fa-linkedin"></i>
+        </a>
+        <a href="" class="text-white me-4">
+          <i class="fab fa-github"></i>
+        </a>
+      </section>
+      <!-- Section: Social -->
+    </div>
+    <!-- Grid container -->
+
+    <!-- Copyright -->
+    <div
+         class="text-center p-3"
+         style="background-color: rgba(252, 0, 0, 0.2)"
+         >
+      © 2020 Copyright:
+      <a class="text-white" href="https://mdbootstrap.com/"
+         >MDBootstrap.com</a
+        >
+    </div>
+    <!-- Copyright -->
+  </footer>
+  <!-- Footer -->
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
     crossorigin="anonymous"></script>
 </body>
-
 </html>
